Add initial HTML structure for portfolio site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
           <!-- Link to interactive dashboard -->
-          <li><a href="dashboard.html">Live Demo</a></li>
+          <li><a href="dashboard.html">Live Dashboard</a></li>
         </ul>
       </nav>
       <div class="hero-content">
@@ -134,12 +134,12 @@
       <p>
         I am a data scientist with a background in the finance industry. My
         passion lies in leveraging machine learning and statistical techniques to
-        extract actionable insights from complex datasets. In my previous roles
+        extract actionable insights. In my previous roles
         I have developed predictive models for risk assessment, automated
         reporting pipelines and implemented anomaly detection systems to
         safeguard mission‑critical operations. Beyond my professional work, I
-        enjoy exploring open‑source projects and translating technical
-        breakthroughs into accessible narratives.
+        enjoy creating content around exploring open‑source projects and translating technical
+        breakthroughs to my audience on social media platforms.
       </p>
     </section>
 
@@ -147,12 +147,12 @@
     <section id="contact" class="section">
       <h2>Contact</h2>
       <p>
-        Interested in collaborating or discussing data science? Feel free to
+        Interested in collaborating? Feel free to
         reach out via email or connect with me on LinkedIn.
       </p>
       <ul class="contact-list">
-        <li>Email: <a href="mailto:example@example.com">example@example.com</a></li>
-        <li>LinkedIn: <a href="https://www.linkedin.com">linkedin.com/in/yourprofile</a></li>
+        <li>Email: <a href="mailto:reachout.rodriguez@gmail.com">reachout.rodriguez@gmail.com</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/a-n-t-h-o-n-y-r/">linkedin.com/in/a-n-t-h-o-n-y-r/</a></li>
       </ul>
     </section>
 
