--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
           <li><a href="index.html#data-cleaning">Data Cleaning</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="dashboard.html" class="active">Live Demo</a></li>
+          <li><a href="dashboard.html" class="active">Live Dashboard</a></li>
         </ul>
       </nav>
       <div class="hero-content subpage-title">
