--- a/index.html
+++ b/index.html
@@ -1,77 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Science & Machine Learning Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">My Portfolio</div>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="dashboard.html">Dashboard</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="hero">
-    <h1>Data Science & Machine Learning Portfolio</h1>
-    <p>Showcasing projects at the intersection of statistics, engineering and creativity.</p>
-  </section>
-  <section id="about" class="section">
-    <div class="row">
-      <div class="text">
-        <h2>About Me</h2>
-        <p>I am a data scientist with a background in finance and engineering. My projects combine rigorous analysis, domain expertise and clear storytelling to deliver insights that make a difference.</p>
-        <p>I have built predictive models, automated data pipelines and interactive dashboards to solve real-world problems.</p>
-      </div>
-      <img src="https://images.pexels.com/photos/669610/pexels-photo-669610.jpeg?auto=compress&cs=tinysrgb&w=1260" alt="About">
-    </div>
-  </section>
-  <section id="projects" class="section">
-    <div class="row">
-      <img src="https://images.pexels.com/photos/3321792/pexels-photo-3321792.jpeg?auto=compress&cs=tinysrgb&w=1260" alt="NASA project">
-      <div class="text">
-        <h2>NASA Anomaly Detection</h2>
-        <p>An end-to-end predictive maintenance project built on NASA’s turbofan engine dataset. Using unsupervised models such as Isolation Forest and Autoencoders, we detect anomalies and forecast remaining useful life.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="text">
-        <h2>Data Ingestion & Cleaning Pipeline</h2>
-        <p>A robust pipeline for ingesting heterogeneous data sources and preparing them for analysis. It demonstrates the importance of clean data and automation in building reliable analytics workflows.</p>
-      </div>
-      <img src="https://images.pexels.com/photos/6065409/pexels-photo-6065409.jpeg?auto=compress&cs=tinysrgb&w=1260" alt="Cleaning project">
-    </div>
-  </section>
-  <section id="contact" class="contact">
-    <h2>Get in Touch</h2>
-    <p>Interested in collaborating or learning more? Feel free to send a message using the form below.</p>
-    <form action="https://formsubmit.co/reachout.rodriguez@gmail.com" method="POST">
-      <div class="row">
-        <input type="text" name="firstName" placeholder="First Name" required>
-        <input type="text" name="lastName" placeholder="Last Name" required>
-      </div>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="subject" placeholder="Subject">
-      <textarea name="message" rows="5" placeholder="Message" required></textarea>
-      <input type="hidden" name="_captcha" value="false">
-      <input type="submit" value="Send Message">
-    </form>
-  </section>
-  <footer>
-    <div class="footer-nav">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-      <a href="dashboard.html">Dashboard</a>
-    </div>
-    <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-  </footer>
+    <header>
+        <nav>
+            <div class="logo">My Portfolio</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Hero Section -->
+        <section id="hero" class="hero">
+            <div class="hero-content">
+                <h1>Data Science & Machine Learning</h1>
+                <p>Showcasing high-impact projects and innovative solutions</p>
+                <a href="#projects" class="btn">Explore Projects</a>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section id="about" class="section about">
+            <div class="row">
+                <div class="text">
+                    <h2>About Me</h2>
+                    <p>I am a data scientist with a background in applied mathematics and experience building predictive models, automating data pipelines, and designing interactive dashboards to solve real-world problems.</p>
+                    <p>My passion lies in uncovering insights from data and communicating them effectively to stakeholders.</p>
+                </div>
+                <div class="image">
+                    <img src="https://images.pexels.com/photos/4057691/pexels-photo-4057691.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="About">
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects" class="section projects">
+            <h2>Projects</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="https://images.pexels.com/photos/256417/pexels-photo-256417.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Project 1">
+                    <h3>Spacecraft Anomaly Detection</h3>
+                    <p>Developed an anomaly detection model for spacecraft telemetry data using unsupervised learning to identify critical anomalies in multivariate time series.</p>
+                </div>
+                <div class="card">
+                    <img src="https://images.pexels.com/photos/3861966/pexels-photo-3861966.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Project 2">
+                    <h3>Data Ingestion & Cleaning Pipeline</h3>
+                    <p>Designed an automated data ingestion pipeline with robust cleaning and transformation steps, significantly reducing manual data preparation time and improving model performance.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="section contact">
+            <h2>Get in Touch</h2>
+            <form action="https://formsubmit.co/reachout.rodriguez@gmail.com" method="POST">
+                <input type="hidden" name="_captcha" value="false">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" name="First Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" name="Last Name" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="Subject">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="Message" rows="5"></textarea>
+                </div>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <ul class="footer-nav">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+            </ul>
+            <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
